# paygate-sdk

./: .gitignore  LICENSE  README.md  build.gradle
.github/workflows/: ci-java.yml  ci-python.yml  ci-typescript.yml
go/v1/: README.md  go.mod
go/v1/client/: client.go  client_test.go  environment.go  error.go  signature.go  signature_test.go  types.go
go/v1/webhook/: handler.go  types.go
java/: README.md
java/examples/: PayExample.java  WebhookServerExample.java
java/v1/: OPS.md  build.gradle  settings.gradle
java/v1/examples/: WebhookServerExample.java
php/v1/: README.md  composer.json
php/v1/src/: Environment.php  ErrorCode.php  PaygateClient.php  PaygateException.php  Signature.php
php/v1/src/webhook/: WebhookHandler.php
php/v1/tests/: SignatureTest.php  WebhookTest.php
python/v1/: README.md  pyproject.toml
python/v1/src/paygate_sdk/: __init__.py  client.py  environment.py  error_code.py  exception.py  signature.py  types.py
python/v1/src/paygate_sdk/webhook/: __init__.py  handler.py  types.py
python/v1/tests/: test_error_code.py  test_signature.py  test_webhook.py
spec/: error-codes.yaml
typescript/: README.md
typescript/v1/: package.json  pnpm-lock.yaml  tsconfig.json
typescript/v1/examples/: pay-example.ts
typescript/v1/src/: environment.ts  error-code.ts  index.ts  paygate-client.ts  paygate-exception.ts  signature.ts
typescript/v1/src/types/: request.ts  response.ts  webhook.ts
typescript/v1/src/webhook/: webhook-handler.ts
typescript/v1/tests/: error-code.test.ts  integration.test.ts  signature.test.ts  webhook.test.ts
(+45 files in other folders)
