[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paygate-sdk"
version = "1.0.0"
description = "PayGate Python SDK — Anthom payment gateway client"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0"]

[tool.setuptools.packages.find]
where = ["src"]
